syntax = "proto3";
package proto;
option go_package = "github.com/thomasjungblut/simpledb/proto";

message UpsertMutation {
    string key = 1;
    string value = 2;
    bytes keyBytes = 3;
    bytes valueBytes = 4;
}

message DeleteTombstoneMutation {
    string key = 1;
    bytes keyBytes = 2;
}

message WalMutation {
    oneof mutation {
        UpsertMutation addition = 1;
        DeleteTombstoneMutation deleteTombStone = 2;
    }
    // don't forget leave couple of indices for the oneof
}
